Fix formatting in Newman run command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Run the Postman collection with Newman
         run: |
               newman run 'InWarranty-Flow Copy.postman_collection.json' \
-              -e QA Copy.postman_environment.json \
+              -e 'QA Copy.postman_environment.json' \
               -r cli,htmlextra
         
           
