--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,9 @@ jobs:
               newman run 'InWarranty-Flow Copy.postman_collection.json' \
               -e 'QA Copy.postman_environment.json' \
               -r cli,htmlextra
-        
+      - name: Newman Report
+        uses: actions/upload-artifact@v6.0.0
+        with: 
+         name: Newman Report
+         path: newman/*.html
           
