Enhance Newman command with HTML report export
Add HTML export option for Newman report

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,8 @@ jobs:
         run: |
               newman run 'InWarranty-Flow Copy.postman_collection.json' \
               -e 'QA Copy.postman_environment.json' \
-              -r cli,htmlextra
+              -r cli,htmlextra \
+              --reporter-htmlextra-export ./newman/index.html
       - name: Newman Report
         if: always() #
         uses: actions/upload-artifact@v6.0.0
