Remove HTML report export from Newman command
Removed the HTML report export from Newman run command.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,9 @@ jobs:
         run: |
               newman run 'InWarranty-Flow Copy.postman_collection.json' \
               -e 'QA Copy.postman_environment.json' \
-              -r cli,htmlextra \
-              --reporter-htmlextra-export ./newman/index.html
+              -r cli,htmlextra 
+             
+              
       - name: Newman Report
         if: always() #
         uses: actions/upload-artifact@v6.0.0
