Update Postman collection and environment file names

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
               npm install -g newman-reporter-htmlextra
       - name: Run the Postman collection with Newman
         run: |
-              newman run 'InWarranty-Flow Copy.postman_collection.json' \
-              -e 'QA Copy.postman_environment.json' \
+              newman run 'Inwarranty-flow Collection.postman_collection.json' \
+              -e 'QA.postman_environment.json' \
               -r cli,htmlextra 
              
               
