--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,8 @@ jobs:
         run: |
               newman run 'Inwarranty-flow Collection.postman_collection.json' \
               -e 'QA.postman_environment.json' \
-              -r cli,htmlextra 
+              -r cli,htmlextra \
+              --reporter-htmlextra-export ./neman/index.html
              
               
       - name: Newman Report
